fix table layout issue

--- a/assets/src/src/App.css
+++ b/assets/src/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-size: 9px;
+  font-size: 10px;
 }
 
 .App-logo {
@@ -29,7 +29,7 @@
   color: #61dafb;
 }
 
-.App .stock-table td {
+.App .stock-table td, .App .stock-table th {
   padding: 0.3rem;
 }
 
